# lti-tool

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  README.md  RENDER_DEPLOYMENT.md  RENDER_FREE_TIER.md  app.py  build.sh  config.py  package.json  pyproject.toml  render.yaml  requirements.txt  tailwind.config.js
.claude/: settings.local.json
configs/: lti_config.json
keys/: public.key
static/css/: input.css  output.css
templates/: base.html  error.html  index.html  launch.html
utils/: __init__.py  lti_utils.py
