[project]
name = "edx-lti-tool"
version = "1.0.0"
description = "A minimal LTI 1.3 tool for OpenEdX integration with Flask and TailwindCSS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "lti",
    "edtech",
    "openedx",
    "flask",
    "education",
    "lms"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "PyLTI1p3[flask]==2.0.0",
    "Flask-Session==0.5.0",
    "redis==5.0.1",
    "cryptography==41.0.7",
    "pycryptodome==3.19.0",
    "PyJWT==2.8.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "urllib3==2.1.0",
    "SQLAlchemy==2.0.23",
    "Flask-SQLAlchemy==3.1.1",
    "gunicorn==21.2.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "pytest-cov==4.1.0",
    "ruff>=0.14.0",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

test = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "factory-boy>=3.3.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

all = [
    "edx-lti-tool[dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/edx-lti-tool"
Documentation = "https://edx-lti-tool.readthedocs.io"
Repository = "https://github.com/yourusername/edx-lti-tool.git"
"Bug Tracker" = "https://github.com/yourusername/edx-lti-tool/issues"
Changelog = "https://github.com/yourusername/edx-lti-tool/blob/main/CHANGELOG.md"

[project.scripts]
lti-tool = "app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "configs/*.json",
    "keys/*.key",
]

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    "pytest>=7.4.3",
    "ruff>=0.14.0",
]

# Specify additional index URLs if needed
# index-url = "https://pypi.org/simple"
# extra-index-url = ["https://private.pypi.org/simple"]

[tool.uv.pip]
# Compile settings
compile-bytecode = true
system = false

[tool.ruff]
# Ruff configuration - combines linting and formatting
target-version = "py39"
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    ".env",
    "build",
    "dist",
    "node_modules",
    "static/css/output.css",
    "__pycache__",
    "*.egg-info",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    "docs",
]

[tool.ruff.lint]
# Enable pycodestyle, pyflakes, isort, and more
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "ARG001", # unused function argument (needed for Flask error handlers)
]

[tool.ruff.lint.isort]
# Combine multiple imports from same module
combine-as-imports = true
# Force imports to be sorted within sections
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__ files
"__init__.py" = ["F401"]
# Allow assert statements in tests
"test_*.py" = ["B011"]
"*_test.py" = ["B011"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix-style newlines
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/static/*",
    "*/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pylti1p3.*",
    "flask_session.*",
]
ignore_missing_imports = true

